dovecot/dovecot-pigeonhole/tests/extensions/include/errors/action-conflicts.sieve
require "include";

include "action-fileinto";
include "action-reject";
